...
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="56dp"
                android:contentDescription="Search" />

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:contentDescription="Profile" />
...
